<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="detailsViewModel"
            type="com.polotech.starwars.search.ui.details.DetailsViewModel" />

        <variable
            name="species"
            type="com.polotech.starwars.search.models.SpeciesPresenter" />

        <variable
            name="planet"
            type="com.polotech.starwars.search.models.PlanetPresenter" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.details.DetailsFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_character_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar_character_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:navigationIcon="@drawable/ic_arrow_back"
                app:title="@{detailsViewModel.character.name}"
                tools:title="Yoda" />

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/layout_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar_character_details">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/label_birth_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:text="@string/label_birth_year"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_birth_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:text="@{detailsViewModel.character.birthYear}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/label_birth_year"
                    app:layout_constraintStart_toEndOf="@+id/label_birth_year"
                    tools:text="896BBY" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/label_height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:text="@string/label_height"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/label_birth_year"
                    app:layout_constraintTop_toBottomOf="@+id/label_birth_year" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{String.format(@string/string_format_height, detailsViewModel.character.heightInCm,detailsViewModel.character.heightInFeet )}"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/label_height"
                    app:layout_constraintStart_toStartOf="@+id/text_birth_year"
                    tools:text="66cm || 2.17feet" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/layout_specie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:visibility="invisible"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_profile">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/label_specie_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:text="@string/label_name"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_specie_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{species.name}"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/label_specie_name"
                    app:layout_constraintStart_toStartOf="@+id/text_specie_language"
                    tools:text="Yoda's species" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/label_specie_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_marginBottom="8dp"
                    android:text="@string/label_language"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/label_specie_name"
                    app:layout_constraintTop_toBottomOf="@+id/label_specie_name" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_specie_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@{species.language}"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/label_specie_language"
                    app:layout_constraintStart_toEndOf="@+id/label_specie_language"
                    tools:text="Galactic basic" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/layout_planet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/margin_medium"
            android:visibility="invisible"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_specie">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/label_planet_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:text="@string/label_name"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_planet_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{planet.name}"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/label_planet_name"
                    app:layout_constraintStart_toStartOf="@+id/text_planet_population"
                    tools:text="unknown" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/label_planet_population"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_marginBottom="8dp"
                    android:text="@string/label_population"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/label_planet_name"
                    app:layout_constraintTop_toBottomOf="@+id/label_planet_name" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_planet_population"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@{planet.population}"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/label_planet_population"
                    app:layout_constraintStart_toEndOf="@+id/label_planet_population"
                    tools:text="unknown" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_film"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_planet"
            tools:listitem="@layout/item_film" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/layout_shimmer_specie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_profile"
            app:shimmer_auto_start="true"
            app:shimmer_highlight_alpha="0"
            tools:visibility="invisible">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <include layout="@layout/item_shimmer_details" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </com.facebook.shimmer.ShimmerFrameLayout>

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/layout_shimmer_planet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/margin_medium"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_shimmer_specie"
            app:shimmer_auto_start="true"
            app:shimmer_highlight_alpha="0"
            tools:visibility="invisible">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <include layout="@layout/item_shimmer_details" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </com.facebook.shimmer.ShimmerFrameLayout>

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/layout_shimmer_film"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/margin_medium"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_shimmer_planet"
            app:shimmer_auto_start="true"
            app:shimmer_highlight_alpha="0"
            tools:visibility="invisible">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <include layout="@layout/item_shimmer_details" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </com.facebook.shimmer.ShimmerFrameLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>